[package]
name = "kvs"
version = "0.1.0"
authors = ["Luffbee <luffbee@outlook.com>"]
edition = "2018"
description = "A key-value server implemented by rust."

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
bson = "0.13.0"
serde_derive = "1.0.92"
serde = "1.0.92"
log = "0.4.6"
env_logger = "0.6.1"
ron = "*"
serde_json = "1.0.39"
simple_logger = "1.3.0"
