[package]
name = "kvs"
version = "0.1.0"
authors = ["Luffbee <luffbee@outlook.com>"]
edition = "2018"
description = "A key-value server implemented by rust."

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
bson = "0.13.0"
serde_derive = "1.0.92"
serde = "1.0.92"
ron = "*"
serde_json = "1.0.39"
slog = { version = "2.4.1", features = ["max_level_info"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
slog-stdlog = "3.0.2"
structopt = "0.2.16"
sled = "0.24.1"
